# netcore-1.0

./: .gitignore  .gitmodules  AUTHORS  LICENSE  Makefile  README  README.md  Vagrantfile  benchmark.sh  frenetic.cabal  netcore.cabal  root-bootstrap.sh  user-bootstrap.sh
examples/: Arp.hs  ArpSpoof.hs  BaseCon.hs  BaseMon.hs  Campus.hs  Campus.py  ErrorDetect.hs  Gateway.py  Internet.hs  KitchenSink.hs  MacLearning.hs  Main.hs  MininetDriver.py  MininetTests.py  Monitor.hs  Multicast.hs  NAT.hs  NATGateway.py  NetStatus.hs  OneRes.hs  PacketOut.hs  Query1.hs  Query2.hs  README.txt  RemoteController.hs  Repeater.hs  ReserveWeb.hs  RunCaching.hs  ShortestPath.hs  TopoSample.hs  TransparentCache.hs  UpdateTest.hs  VerifTest.hs  VlanBug.hs  VlanBug.py  WireMonitor.hs  arbitrary_topo.py  demo.py  frenetic-examples.cabal  kitchen_sink.sh  (+3 more)
examples/scripts/: monitor_console.sh  sink_host.sh
front-ends/python/: netcore.py  netcore_controller.py
mininet-tests/: Arp.hs  Gateway.py  Internet.hs  KitchenSink.hs  MacLearning.hs  Main.hs  MininetDriver.py  MininetTests.py  Monitor.hs  NAT.hs  NATGateway.py  Query1.hs  Reactive1.hs  Repeater.hs  SimpleMonitor.hs  frenetic-examples.cabal
src/: Benchmark.hs
src/Frenetic/: CoFiniteSet.hs  Common.hs  Compat.hs  Compiler.hs  EthernetAddress.hs  FRP.hs  Frenetic.hs  IPAddress.hs  Language.hs  LargeWord.hs  NetCore.hs  NettleEx.hs  Network.hs  NetworkFrames.hs  OpenFlow.hs  Pattern.hs  Patterns.hs  Playground.hs  PolicyGen.hs  Sat.hs  Server.hs  Topo.hs  TopoGen.hs  TopoParser.hs  Update.hs  Update1.hs  Util.hs  Z3.hs
src/Frenetic/Caching/: Cache.hs  CacheUtil.hs
src/Frenetic/Hosts/: Nettle.hs
src/Frenetic/NetCore/: .#Types.hs  API.hs  Action.hs  Compiler.hs  Controller.hs  JSON.hs  Pretty.hs  Reduce.hs  Semantics.hs  Short.hs  Types.hs  Util.hs
src/Frenetic/NetStream/: API.hs  Compiler.hs  FRP.hs
src/Frenetic/Slices/: Compile.hs  Sat.hs  Slice.hs  Verification.hs  VlanAssignment.hs
src/Frenetic/Switches/: OpenFlow.hs
testsuite/: Arbitrary.hs  Common.hs  Main.hs  Semantics.hs
testsuite/Examples/policies/: policies.cabal
testsuite/Examples/policies/Policies/: ShortestPath.hs
testsuite/Examples/repeater/: repeater.cabal  repeater.hs  repeater_topo.py  run_test.sh
testsuite/Examples/routing/: routing.cabal  routing.hs  run_test.sh
testsuite/Examples/topologies/: Topologies.hs  clique_topo.py  print_topology.py  repeater_topo.py  routing_topo.py  topologies.cabal  util.py
testsuite/Examples/topologies/Topologies/: Repeater.hs
testsuite/Tests/Frenetic/: .ArbitraryCompat.hs.swp  .TestCompat.hs.swo  .TestCompat.hs.swp  ArbitraryCompat.hs  ArbitraryPattern.hs  TestCompat.hs  TestSat.hs  Util.hs
testsuite/Tests/Frenetic/Hosts/: TestHosts.hs
testsuite/Tests/Frenetic/NetCore/: ArbitraryAPI.hs  ArbitraryTypes.hs  TestCompiler.hs  TestNetCore.hs
testsuite/Tests/Frenetic/NetStream/: TestNetStream.hs
testsuite/Tests/Frenetic/Slices/: TestCompile.hs  TestEndToEnd.hs  TestSlice.hs  TestVerification.hs  TestVlanAssignment.hs
testsuite/Tests/Frenetic/Switches/: ArbitraryOpenFlow.hs  TestSwitches.hs
