Name:             frenetic
Version:          0.2.0
License:          OtherLicense
Cabal-Version:    >= 1.9.2
Build-Type:       Simple


Library
    build-depends:      base >= 4 && < 5,
                        containers >= 0.4.2.1,
                        multiset >= 0.2.1,
                        mtl >= 2.0.1.0,
                        fgl,
                        newtype,
                        newtype-th,
                        nettle-openflow == 0.2.*,
                        process,
                        HList
    exposed-modules:    Frenetic.NetCore,
                        Frenetic.NetCore.Semantics,
                        Frenetic.NetCore.Short
                        Frenetic.Compat,
                        Frenetic.LargeWord,
                        Frenetic.Pattern,
                        Frenetic.NetCore.API,
                        Frenetic.Server
    other-modules:      Frenetic.Util,
                        Frenetic.Switches.OpenFlow,
                        Frenetic.NetCore.Compiler,
                        Frenetic.Hosts.Nettle
                        Frenetic.Topo
    Extensions: ScopedTypeVariables, TypeFamilies, FlexibleInstances,
      FlexibleContexts, DoAndIfThenElse, RecordWildCards
    ghc-options:
      -fwarn-incomplete-patterns
    hs-source-dirs:     src

Executable frenetic-example-suite
    build-depends:      base >= 4 && < 5,
                        containers >= 0.4.2.1,
                        multiset >= 0.2.1,
                        mtl >= 2.0.1.0,
                        newtype,
                        newtype-th,
                        nettle-openflow == 0.2.*,
                        HList
    Extensions: ScopedTypeVariables, TypeFamilies, FlexibleInstances,
      FlexibleContexts, RecordWildCards
    ghc-options:
      -fwarn-incomplete-patterns
    hs-source-dirs:     src
                        mininet-tests
   Main-Is:             Main.hs

Test-Suite frenetic-tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base,
                      containers,
                      fgl,
                      multiset,
                      newtype,
                      newtype-th,
                      nettle-openflow == 0.2.*,
                      mtl,
                      process,
                      QuickCheck >= 2,
                      HUnit,
                      test-framework,
                      test-framework-th,
                      test-framework-hunit,
                      test-framework-quickcheck2,
                      HList
    ghc-options:
      -fwarn-incomplete-patterns
    Extensions: ScopedTypeVariables, TypeFamilies, FlexibleInstances,
      FlexibleContexts, TemplateHaskell, DoAndIfThenElse, RecordWildCards
    hs-source-dirs:   testsuite,
                      src
