Name:             frenetic
Version:          0.2.0
License:          OtherLicense
Cabal-Version:    >= 1.9.2
Build-Type:       Simple


Library
  build-depends:
    base >= 4 && < 5,
    containers >= 0.4.2.1,
    multiset >= 0.2.1,
    mtl >= 2.0.1.0,
    fgl,
    newtype,
    newtype-th,
    process,
    HList,
    hslogger == 1.2.*,
    binary == 0.5.1.*,
    bytestring == 0.9.*,
    binary-strict == 0.4.*,
    parsec == 3.1.*,
    syb == 0.3.*,
    bimap == 0.2.*,
    network == 2.3.*
  exposed-modules:
    Frenetic.NetCore,
    Frenetic.NetCore.Semantics,
    Frenetic.NetCore.Short
    Frenetic.Compat,
    Frenetic.LargeWord,
    Frenetic.Pattern,
    Frenetic.NetCore.API,
    Frenetic.Server
  other-modules:
    Frenetic.Util
    Frenetic.Switches.OpenFlow
    Frenetic.NetCore.Compiler
    Frenetic.Hosts.Nettle
    Frenetic.Topo
    Nettle.Ethernet.EthernetAddress
    Nettle.Ethernet.EthernetFrame
    Nettle.Ethernet.AddressResolutionProtocol
    Nettle.IPv4.IPAddress 
    Nettle.IPv4.IPPacket
    Nettle.OpenFlow.Port
    Nettle.OpenFlow.Action
    Nettle.OpenFlow.Switch
    Nettle.OpenFlow.Match
    Nettle.OpenFlow.FlowTable
    Nettle.OpenFlow.Statistics
    Nettle.OpenFlow.Error
    Nettle.OpenFlow.Packet
    Nettle.OpenFlow.Messages
    Nettle.OpenFlow.StrictPut
    Nettle.OpenFlow.MessagesBinary
    Nettle.OpenFlow
    Nettle.Servers.Server
    Nettle.Servers.Client
  Extensions:
    ScopedTypeVariables, TypeFamilies, FlexibleInstances,
    FlexibleContexts, DoAndIfThenElse, RecordWildCards
  ghc-options:
    -fwarn-incomplete-patterns
  hs-source-dirs:
    src
    nettle-openflow/src
  cpp-options: "-DOPENFLOW_VERSION=1"

Executable frenetic-example-suite
  cpp-options: "-DOPENFLOW_VERSION=1"
  build-depends:
    base >= 4 && < 5,
    containers >= 0.4.2.1,
    multiset >= 0.2.1,
    mtl >= 2.0.1.0,
    newtype,
    newtype-th,
    HList,
    hslogger == 1.2.*,
    binary == 0.5.1.*,
    bytestring == 0.9.*,
    binary-strict == 0.4.*,
    parsec == 3.1.*,
    syb == 0.3.*,
    bimap == 0.2.*,
    network == 2.3.*
  Extensions:
    ScopedTypeVariables, TypeFamilies, FlexibleInstances, FlexibleContexts,
    RecordWildCards
  ghc-options:
    -fwarn-incomplete-patterns
  hs-source-dirs:
    src,
    mininet-tests,
    nettle-openflow/src
  Main-Is:
    Main.hs

Test-Suite frenetic-tests
  type:
    exitcode-stdio-1.0
  cpp-options: "-DOPENFLOW_VERSION=1"
  main-is:          
    Main.hs
  build-depends:    
    ansi-wl-pprint,
    base,
    containers,
    fgl,
    multiset,
    newtype,
    newtype-th,
    mtl,
    process,
    QuickCheck >= 2,
    HUnit,
    test-framework,
    test-framework-th,
    test-framework-hunit,
    test-framework-quickcheck2,
    HList,
    hslogger == 1.2.*,
    binary == 0.5.1.*,
    bytestring == 0.9.*,
    binary-strict == 0.4.*,
    parsec == 3.1.*,
    syb == 0.3.*,
    bimap == 0.2.*,
    network == 2.3.*
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:
    ScopedTypeVariables, TypeFamilies, FlexibleInstances,
    FlexibleContexts, TemplateHaskell, DoAndIfThenElse, RecordWildCards
  hs-source-dirs:
    testsuite,
    src,
    nettle-openflow/src
