Name:             netcore
Version:          1.1.0
Copyright:        (c) 2011--2012, Cornell University and Princeton University
License:          BSD3
License-File:     LICENSE
Cabal-Version:    >= 1.9.2
Build-Type:       Simple
Synopsis: The NetCore compiler and runtime system for OpenFlow networks.
Description:
  NetCore is a high-level network programming language. This package provides
  a NetCore compiler and runtime system for OpenFlow networks.

  See the 'Frenetic.NetCore' module for commonly used functions.

  We have several example programs available online at
  <https://github.com/frenetic-lang/netcore/tree/master/examples>

Library
  build-depends:
    base >= 4,
    binary-strict >= 0.4.0,
    containers,
    mtl >= 2.0.1.0,
    ansi-wl-pprint,
    fgl,
    process,
    random,
    HList,
    hslogger == 1.2.*,
    binary == 0.5.1.*,
    bytestring == 0.9.*,
    parsec == 3.1.*,
    syb == 0.3.*,
    bimap == 0.2.*,
    network >= 2.3,
    json >= 0.4.3
  exposed-modules:
    Nettle.Ethernet.EthernetAddress,
    Frenetic.Common,
    Frenetic.NetCore,
    Frenetic.NetCore.JSON
    Frenetic.NetCore.Semantics,
    Frenetic.NetCore.Short,
    Frenetic.NetCore.Types,
    Frenetic.NetCore.Util,
    Frenetic.NetworkFrames,
    Frenetic.Pattern,
    Frenetic.NetCore.Reduce,
    Frenetic.Server,
    Frenetic.CoFiniteSet,
    Frenetic.Topo,
    Frenetic.TopoGen
    Frenetic.TopoParser
  other-modules:
    Frenetic.Hosts.Nettle,
    Frenetic.NetCore.Compiler,
    Frenetic.NetCore.Pretty,
    Frenetic.NettleEx,
    Frenetic.Slices.Compile,
    Frenetic.Slices.Slice,
    Frenetic.Slices.VlanAssignment,
    Frenetic.Switches.OpenFlow,
    Frenetic.Update,
    Frenetic.Update1,
    Nettle.Ethernet.AddressResolutionProtocol,
    Nettle.Ethernet.EthernetFrame,
    Nettle.IPv4.IPAddress,
    Nettle.IPv4.IPPacket,
    Nettle.OpenFlow,
    Nettle.OpenFlow.Action,
    Nettle.OpenFlow.Error,
    Nettle.OpenFlow.FlowTable,
    Nettle.OpenFlow.Match,
    Nettle.OpenFlow.Messages,
    Nettle.OpenFlow.MessagesBinary,
    Nettle.OpenFlow.Packet,
    Nettle.OpenFlow.Port,
    Nettle.OpenFlow.Statistics,
    Nettle.OpenFlow.Switch,
    Nettle.Servers.Server    
  Extensions:
    ScopedTypeVariables, FlexibleInstances,
    FlexibleContexts, DoAndIfThenElse, RecordWildCards,
    DeriveDataTypeable
  ghc-options:
    -fwarn-incomplete-patterns -threaded
  hs-source-dirs:
    src
    nettle-openflow/src
  cpp-options: "-DOPENFLOW_VERSION=1"

benchmark frenetic-benchmark
  cpp-options: "-DOPENFLOW_VERSION=1"
  type:          exitcode-stdio-1.0
  build-depends: base >= 4 && < 5,
                 containers,
                 ansi-wl-pprint,
                 fgl,
                 mtl >= 2.0.1.0,
                 process,
                 random,
                 HList,
                 hslogger == 1.2.*,
                 binary == 0.5.1.*,
                 bytestring == 0.9.*,
                 parsec == 3.1.*,
                 syb == 0.3.*,
                 bimap == 0.2.*,
                 network >= 2.3,
                 json >= 0.4.3
  Extensions: ScopedTypeVariables, TypeFamilies, FlexibleInstances,
    FlexibleContexts, DoAndIfThenElse, RecordWildCards,
    DeriveDataTypeable
  ghc-options:
    -fwarn-incomplete-patterns
  hs-source-dirs: src
                  nettle-openflow/src
  Main-Is:         Benchmark.hs

Test-Suite frenetic-tests
  type:
    exitcode-stdio-1.0
  cpp-options: "-DOPENFLOW_VERSION=1"
  main-is:
    Main.hs
  build-depends:
    ansi-wl-pprint,
    base,
    containers,
    fgl,
    mtl,
    process,
    random,
    QuickCheck >= 2,
    HUnit,
    test-framework,
    test-framework-th,
    test-framework-hunit,
    test-framework-quickcheck2,
    HList,
    hslogger == 1.2.*,
    binary == 0.5.1.*,
    bytestring == 0.9.*,
    parsec == 3.1.*,
    syb == 0.3.*,
    bimap == 0.2.*,
    network >= 2.3,
    json >= 0.4.3
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:
    ScopedTypeVariables, TypeFamilies, FlexibleInstances,
    FlexibleContexts, TemplateHaskell, DoAndIfThenElse, RecordWildCards,
    DeriveDataTypeable
  hs-source-dirs:
    testsuite,
    src,
    nettle-openflow/src
