Name:             topologies
Version:          0.1
License:          OtherLicense
Cabal-Version:    >= 1.9.2
Build-Type:       Simple


Library
    build-depends:      base,
                        containers,
                        fgl,
                        parsec,
                        frenetic
    exposed-modules:    Topologies
    hs-source-dirs:     .

